# PaperEngine

./: README.md
PaperEngine_v0.0.1/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  ROADMAP.md
PaperEngine_v0.0.1/docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md
PaperEngine_v0.0.1/examples/: example_game.cpp
PaperEngine_v0.0.1/include/: AdvancedAnimation.h  Audio.h  Background3D.h  Components.h  Entity.h  FramePacing.h  Input.h  Lighting.h  Math.h  PaperEngine.h  Physics.h  Renderer.h  Resources.h  Scene.h  Shader.h  Vector2.h
PaperEngine_v0.0.1/src/: NewFeatures.cpp  PaperEngine.cpp
PaperWindowManager/: PaperWindowManager.md
PaperWindowManager/SheetServer/: SheetServer.md
